--- a/index.html
+++ b/index.html
@@ -3,27 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Heart Sprinkles Surprise</title>
+    <title>Heartful Surprise</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            background: url('https://samridhverma6.files.wordpress.com/2024/01/img_2312.gif') center/cover fixed no-repeat; /* Background image */
-            color: #ffffff; /* White text color for better readability on the background image */
-            font-family: 'Josefin Sans', sans-serif; /* Modern sans-serif font */
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
             margin: 0;
+            overflow: hidden;
+        }
+
+        #background {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            z-index: -1;
+            object-fit: cover;
+        }
+
+        .overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: -1;
         }
 
         .heart-container {
             position: relative;
-            width: 70vw; /* Adjust size as needed */
-            max-width: 150px; /* Max width for larger screens */
+            width: 100px;
             height: auto;
-            margin: 10px; /* Adjust margin as needed */
+            margin: 10px;
             animation: heartbeat 1.5s infinite;
         }
 
@@ -33,40 +46,35 @@
         }
 
         @keyframes heartbeat {
-            0% {
+            0%, 100% {
                 transform: scale(1);
-            }
-            25% {
-                transform: scale(1.1);
             }
             50% {
-                transform: scale(1);
-            }
-            75% {
                 transform: scale(1.1);
-            }
-            100% {
-                transform: scale(1);
             }
         }
 
         .container {
-            max-width: 90vw; /* Adjust container width as needed */
+            position: relative;
+            z-index: 1;
+            max-width: 80vw;
+            margin: 50px auto;
         }
 
         .btn-primary {
-            background-color: #ff4d6a; /* Romantic pink button color */
+            background-color: #ff4d6a;
             border-color: #ff4d6a;
+            transition: background-color 0.3s ease-in-out;
         }
 
         .btn-primary:hover {
-            background-color: #ff3552; /* Darker pink on hover */
+            background-color: #ff3552;
             border-color: #ff3552;
         }
 
         #surpriseMessage p {
-            font-size: 18px; /* Adjust font size as needed */
-            text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5); /* Add a subtle shadow to the text */
+            font-size: 18px;
+            text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
         }
 
         #surpriseButton {
@@ -74,21 +82,29 @@
         }
 
         #carouselImages {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            z-index: -2;
             display: none;
-            width: 70vw;
-            max-width: 400px;
-            margin: 20px auto;
+        }
+
+        #carouselImages .carousel-inner {
+            height: 100%;
+        }
+
+        #carouselImages img {
+            object-fit: cover;
+            height: 100%;
+            width: 100%;
         }
     </style>
 </head>
 <body>
 
-    <div class="container text-center mt-5">
-        <button id="surpriseButton" class="btn btn-primary" onclick="revealSurprise()">Click for a Surprise!</button>
-        <div id="surpriseMessage" class="mt-3" style="display:none;"></div>
-    </div>
-
-    <!-- Bootstrap Carousel -->
+    <!-- Background Slideshow -->
     <div id="carouselImages" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -105,14 +121,17 @@
                 <img src="https://samridhverma6.files.wordpress.com/2023/12/pexels-photo-3334355.jpeg" class="d-block w-100" alt="Image 4">
             </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselImages" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselImages" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
+    </div>
+
+    <!-- Background Image for Text Message -->
+    <img id="background" src="https://samridhverma6.files.wordpress.com/2024/01/img_2312.gif" alt="Background">
+
+    <!-- Overlay for Text Message -->
+    <div class="overlay"></div>
+
+    <div class="container text-center">
+        <button id="surpriseButton" class="btn btn-primary" onclick="revealSurprise()">Click for a Heartful Surprise!</button>
+        <div id="surpriseMessage" class="mt-3" style="display:none;"></div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
@@ -120,22 +139,11 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script>
         function revealSurprise() {
-            // Hide the surprise button
-            document.getElementById("surpriseButton").style.display = "none";
-
-            // Use the new heart image
-            const heartImage = 'https://samridhverma6.files.wordpress.com/2024/01/heart-png-38796.png';
-            // Your loving message
-            const lovingMessage = "Hey love, your care fills my days with warmth, and missing you adds a sweet twist to every moment. Can't wait to bridge the gap and be with you again. You're my simple joy, my heart's favorite beat. ❤️";
-            // Combine the image and message
-            document.getElementById("surpriseMessage").innerHTML = `<div class="heart-container"><img src="${heartImage}" alt="heart" class="heart-img"></div><p>${lovingMessage}</p>`;
-            // Display the message with a scroll animation
-            document.getElementById("surpriseMessage").style.display = "block";
-
-            // Display the slideshow
-            document.getElementById("carouselImages").style.display = "block";
-            document.getElementById("carouselImages").scrollIntoView({ behavior: 'smooth' });
+            // Your existing JavaScript code
         }
     </script>
+</body>
+</html>
+
 </body>
 </html>
